[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-bot-agent"
version = "0.1.0"
description = "An AI agent that reviews PRs and leaves helpful comments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Niema El Bouri", email = "niema_el@outlook.com"}
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pr-bot = "pr_bot_agent.agent:main"
